--- a/main.html
+++ b/main.html
@@ -41,7 +41,9 @@
       }
     </style>
 
-    <ul></ul>
+    <ul id = "bnad">
+		
+	</ul>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
